tests/invalid/list_magic_add_wrong_type/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    out: list[int] = xs.__add__(42)


if __name__ == "__main__":
    run_case()
